--- a/src/app/shared/components/dropdown/dropdown.component.scss
+++ b/src/app/shared/components/dropdown/dropdown.component.scss
@@ -436,8 +436,8 @@
     
     // Icono izquierdo (lado izquierdo en desktop)
     .dropdown-icon-img.left {
-      width: 18px;
-      height: 18px;
+      width: 24px; // Estándar solicitado
+      height: 24px; // Estándar solicitado
       margin-right: 6px;
     }
     
