--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -53,10 +53,7 @@
 
     
 
-    <!-- Copyright -->
-    <div class="footer-copyright">
-      <p>© 2025- Compañía de Seguros Bolívar S.A. - Seguros Comerciales Bolívar S.A. - Todos los derechos reservados</p>
-    </div>
+    <!-- Copyright eliminado -->
   </div>
 </footer>
 
